kypnt_samples/etop-dev/kubernetes/ingress-service/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-etop-dev-backend
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    #kubernetes.io/ingress.class: nginx  
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
      - dev.examinion.com
    secretName: etopdev-tls2 
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: test-service-service
            port:
              number: 8080
      #- path: /(/|$)(.*)        
        #pathType: Prefix
        #backend:
          #service:
            #name: frontend-service-service
            #port:
              #number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-etop-dev-frontend
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    #kubernetes.io/ingress.class: nginx  
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - dev.examinion.com
    secretName: etopdev-tls2 
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /        
        pathType: Prefix
        backend:
          service:
            name: frontend-service-service
            port:
              number: 80
